BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/EM_Catalog_vod__c.object
<CustomObject>
    <description>Used to store the names of topics and services that pertain to Veeva Event Management.
Changed label to Topic for HCPTS Events Management (SW 6/15)</description>
    <fields>
        <fullName>Active_HCPTS__c</fullName>
        <description>Boolean indicating if the Material is expired/active or not.</description>
        <formula>IF(ISBLANK(Expiration_Date_HCPTS__c), &apos;N/A&apos;,
IF(Expiration_Date_HCPTS__c  &gt;  TODAY(), &apos;ACTIVE&apos;,&apos;EXPIRED&apos;)
)</formula>
        <inlineHelpText>Boolean indicating if the Material is expired/active or not.</inlineHelpText>
        <label>Active?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicable_Activity_Status_HCPTS__c</fullName>
        <description>Status field that corresponds to the Required checkbox. If this value is anything other than Not Applicable, the Required Attachment check is performed before the Activity moves into the specified status</description>
        <inlineHelpText>Status field that corresponds to the Required checkbox. If this value is anything other than Not Applicable, the Required Attachment check is performed before the Activity moves into the specified status</inlineHelpText>
        <label>Applicable Activity Status</label>
        <picklist>
            <picklistValues>
                <fullName>Canceled_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Service Coordinator Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Closeout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Exception Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Business Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Post-Execution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Date_HCPTS__c</fullName>
        <description>Approval Date - from external system</description>
        <inlineHelpText>Approval Date - from external system</inlineHelpText>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Base_Language_Name_vod__c</fullName>
        <description>The name of the catalog entry in the base language. If populated, this field can be used to tie entries together across languages.</description>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_HCPTS__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reimbursable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Description</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deduction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_HCPTS__c</fullName>
        <description>Channel</description>
        <inlineHelpText>Channel</inlineHelpText>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Face-to-Face</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Created_By_HCTPS__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+CreatedById, CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName) + &quot;, &quot; + 
TEXT(MONTH(DATEVALUE(CreatedDate )))+&quot;/&quot;+TEXT(DAY(DATEVALUE(CreatedDate )))+&quot;/&quot;+TEXT(YEAR(DATEVALUE(CreatedDate )))</formula>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Description of the material</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Easy_Search_Field_HCPTS__c</fullName>
        <externalId>true</externalId>
        <label>Easy Search Help Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_HCPTS__c</fullName>
        <description>Expiration Date (Sourced from External System)</description>
        <inlineHelpText>Expiration Date (Sourced from External System)</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Item_Id_HCPTS__c</fullName>
        <description>Item Id from external system</description>
        <externalId>true</externalId>
        <inlineHelpText>Item Id from external system</inlineHelpText>
        <label>Item Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Item_Location_HCPTS__c</fullName>
        <description>URL of the external system where this item is hosted</description>
        <inlineHelpText>URL of the external system where this item is hosted</inlineHelpText>
        <label>Item Location</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <description>Sourced from External System</description>
        <inlineHelpText>Sourced from External System</inlineHelpText>
        <label>Item Type</label>
        <picklist>
            <picklistValues>
                <fullName>Handouts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slide Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agenda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sign-in Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action Item</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_HCPTS__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+LastModifiedById, LastModifiedBy.FirstName + &quot; &quot; + LastModifiedBy.LastName) + &quot;, &quot; + 
TEXT(MONTH(DATEVALUE(LastModifiedDate)))+&quot;/&quot;+TEXT(DAY(DATEVALUE(LastModifiedDate)))+&quot;/&quot;+TEXT(YEAR(DATEVALUE(LastModifiedDate)))</formula>
        <label>Last Modified By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mandated_Completion_Status_HCPTS__c</fullName>
        <description>Provide the required Completion status for the Action Item. The Activity owner must move the Action item into one of the Completion statuses indicated in this field</description>
        <inlineHelpText>Provide the required Completion status for the Action Item. The Activity owner must move the Action item into one of the Completion statuses indicated in this field</inlineHelpText>
        <label>Mandated Completion Status</label>
        <picklist>
            <controllingField>Mandatory_HCPTS__c</controllingField>
            <picklistValues>
                <fullName>Complete</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Externally Managed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Mandatory_HCPTS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the action item (Activity Material) must be marked as &quot;Complete&quot; before &quot;Applicable Status&quot; reaches for the Activity</description>
        <inlineHelpText>If checked, the action item (Activity Material) must be marked as &quot;Complete&quot; before &quot;Applicable Status&quot; reaches for the Activity</inlineHelpText>
        <label>Mandatory?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_vod__c</fullName>
        <description>The name of the catalog entry in the local language</description>
        <label>Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_HCPTS__c</fullName>
        <description>Veeva attribute</description>
        <inlineHelpText>Veeva attribute</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Country_HCPTS__c</fullName>
        <description>Owner.Country</description>
        <formula>Owner:User.Country</formula>
        <inlineHelpText>Owner.Country</inlineHelpText>
        <label>Owner Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Source_Country_HCPTS__c</fullName>
        <formula>Text(Owner:User.User_Source_Country_BMS_CORE__c)</formula>
        <label>Owner Source Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose_HCPTS__c</fullName>
        <description>Purpose for materials - Ad Board, Clinical Trial etc</description>
        <inlineHelpText>Purpose for materials - Ad Board, Clinical Trial etc</inlineHelpText>
        <label>Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>Ad Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Trial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requires_Attachment_HCPTS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the corresponding Activity Material must have atleast one Attachment attached to it before moving to Applicable Activity Status</description>
        <inlineHelpText>If checked, the corresponding Activity Material must have atleast one Attachment attached to it before moving to Applicable Activity Status</inlineHelpText>
        <label>Needs Attachment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Subtype__c</fullName>
        <label>Contract Subtype</label>
        <picklist>
            <controllingField>Service_Type_HCPTS__c</controllingField>
            <picklistValues>
                <fullName>Speaker Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Monitoring Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Presentation (one-time)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Presentation (Serial)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Review Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publication Steering Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Study Steering Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDA Mock Advisory Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Preparation and/or Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recorded Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protocol Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation at a Congress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship to Congress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibits, Booths and Displays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty for Preceptorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Consulting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Type_HCPTS__c</fullName>
        <description>Helps categorize a Topic/Service per BMS Service Type</description>
        <inlineHelpText>Helps categorize a Topic/Service per BMS Service Type</inlineHelpText>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sponsorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Speaker_HCPTS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populate this Lookup to indicate Materials owned/provided by the Speaker</description>
        <inlineHelpText>Populate this Lookup to indicate Materials owned/provided by the Speaker</inlineHelpText>
        <label>Speaker</label>
        <referenceTo>EM_Speaker_vod__c</referenceTo>
        <relationshipName>Event_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Indicates the status of the material.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staged_vod</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Audience_HCPTS__c</fullName>
        <description>Advocacy
Field Medical
Field Access</description>
        <inlineHelpText>Advocacy
Field Medical
Field Access</inlineHelpText>
        <label>Target Audience</label>
        <picklist>
            <picklistValues>
                <fullName>Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Access</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Topic</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>Name_vod__c</columns>
        <columns>Item_Id_HCPTS__c</columns>
        <columns>Base_Language_Name_vod__c</columns>
        <columns>Category_HCPTS__c</columns>
        <columns>Easy_Search_Field_HCPTS__c</columns>
        <columns>Service_Type_HCPTS__c</columns>
        <columns>Status_vod__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Last_Modified_By_HCPTS__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Action_Items</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Name_vod__c</columns>
        <columns>Description_vod__c</columns>
        <columns>Applicable_Activity_Status_HCPTS__c</columns>
        <columns>Mandatory_HCPTS__c</columns>
        <columns>Requires_Attachment_HCPTS__c</columns>
        <columns>Item_Type__c</columns>
        <columns>Item_Location_HCPTS__c</columns>
        <columns>Status_vod__c</columns>
        <columns>Item_Id_HCPTS__c</columns>
        <columns>External_ID_vod__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EM_Catalog_vod__c.Action_Item_HCPTS</value>
        </filters>
        <label>Action Items</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Activity_Material</fullName>
        <columns>NAME</columns>
        <columns>Name_vod__c</columns>
        <columns>Base_Language_Name_vod__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Category_HCPTS__c</columns>
        <columns>Applicable_Activity_Status_HCPTS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EM_Catalog_vod__c.Material_HCPTS</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>notEqual</operation>
            <value>Neary</value>
        </filters>
        <label>Activity Material</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Activity_Topics</fullName>
        <columns>NAME</columns>
        <columns>Name_vod__c</columns>
        <columns>Applicable_Activity_Status_HCPTS__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Active_HCPTS__c</columns>
        <columns>Requires_Attachment_HCPTS__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EM_Catalog_vod__c.Event_Topic_vod</value>
        </filters>
        <label>Activity Topics</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Easy_Search_View</fullName>
        <columns>NAME</columns>
        <columns>Last_Modified_By_HCPTS__c</columns>
        <columns>Base_Language_Name_vod__c</columns>
        <columns>Category_HCPTS__c</columns>
        <columns>Service_Subtype__c</columns>
        <columns>Service_Type_HCPTS__c</columns>
        <columns>Easy_Search_Field_HCPTS__c</columns>
        <filterScope>Everything</filterScope>
        <label>Easy Search View</label>
        <language>en_US</language>
        <sharedTo>
            <role>BMSEUENT_ENT</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Material_Checklist</fullName>
        <columns>NAME</columns>
        <columns>Name_vod__c</columns>
        <columns>Base_Language_Name_vod__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Category_HCPTS__c</columns>
        <columns>Applicable_Activity_Status_HCPTS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EM_Catalog_vod__c.Material_HCPTS</value>
        </filters>
        <label>Material Checklist</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Other_Contract_Descriptions</fullName>
        <columns>NAME</columns>
        <columns>Last_Modified_By_HCPTS__c</columns>
        <columns>Base_Language_Name_vod__c</columns>
        <columns>Category_HCPTS__c</columns>
        <columns>Service_Subtype__c</columns>
        <columns>Service_Type_HCPTS__c</columns>
        <columns>Easy_Search_Field_HCPTS__c</columns>
        <columns>Name_vod__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category_HCPTS__c</field>
            <operation>equals</operation>
            <value>Other</value>
        </filters>
        <label>Other Contract Descriptions</label>
        <language>en_US</language>
        <sharedTo>
            <role>BMSEUENT_ENT</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sign_In_templates_TYLER</fullName>
        <columns>NAME</columns>
        <columns>Name_vod__c</columns>
        <columns>Active_HCPTS__c</columns>
        <columns>Status_vod__c</columns>
        <columns>Target_Audience_HCPTS__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EM_Catalog_vod__c.Print_Sign_In_Template_vod</value>
        </filters>
        <label>Sign In templates - TYLER</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Speaker_Service</fullName>
        <columns>NAME</columns>
        <columns>Name_vod__c</columns>
        <columns>Category_HCPTS__c</columns>
        <columns>Service_Type_HCPTS__c</columns>
        <columns>Service_Subtype__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EM_Catalog_vod__c.Speaker_Service_vod</value>
        </filters>
        <label>Speaker Service</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>T -{0000000000}</displayFormat>
        <label>Topic Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Topics</pluralLabel>
    <recordTypes>
        <fullName>Action_Item_HCPTS</fullName>
        <active>true</active>
        <description>Used to store checklist items that Project Owners can refer to while conducting an Activity</description>
        <label>Action Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contract_Description_HCPTS</fullName>
        <active>false</active>
        <description>Used to store the Contract Descriptions</description>
        <label>Contract Description</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event_Topic_vod</fullName>
        <active>true</active>
        <description>Used to store a collection of Materials that can be associated either directly to an Activity or indirectly when it inherits a Need</description>
        <label>Event_Topic_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Topic_vod</fullName>
        <active>true</active>
        <description>Used to store the general topics that a speaker can be trained on, such as compliance training.</description>
        <label>General_Topic_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Material_HCPTS</fullName>
        <active>true</active>
        <description>Used to store Materials that can be used at an Activity</description>
        <label>Material</label>
    </recordTypes>
    <recordTypes>
        <fullName>Presentation_vod</fullName>
        <active>false</active>
        <description>Used to store presentations for events</description>
        <label>Presentation_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Print_Invitation_Template_vod</fullName>
        <active>true</active>
        <description>Used to store .docx templates for print invitations for events</description>
        <label>Print_Invitation_Template_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Print_Sign_In_Template_vod</fullName>
        <active>true</active>
        <description>Used to store .docx templates for print sign in sheets for events</description>
        <label>Print_Sign_In_Template_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Speaker_Service_vod</fullName>
        <active>true</active>
        <description>Used to store the contracted services for a speaker.</description>
        <label>Speaker_Service_vod</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Applicable_Activity_Status_Spec</fullName>
        <active>true</active>
        <description>Applicable Activity Status must be specified if Mandatory or Requires Attachment is checked</description>
        <errorConditionFormula>AND( 
     OR( Requires_Attachment_HCPTS__c , Mandatory_HCPTS__c ) , 
        ISBLANK(TEXT( Applicable_Activity_Status_HCPTS__c )) 
)</errorConditionFormula>
        <errorDisplayField>Applicable_Activity_Status_HCPTS__c</errorDisplayField>
        <errorMessage>Applicable Activity Status cannot be blank for Mandatory Action Items and/or Materials that need Attachment</errorMessage>
    </validationRules>
</CustomObject>